--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "license": "MIT",
   "devDependencies": {
     "@parcel/transformer-sass": "2.8.3",
-    "parcel": "^2.8.3"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "parcel": "^2.8.3",
+    "typescript": "*"
   }
 }
