--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@parcel/transformer-sass": "2.8.3",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "parcel": "^2.8.3",
+    "prettier": "2.8.5",
     "typescript": "*"
   }
 }
