--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel",
+    "start": "parcel --open",
     "build": "parcel build"
   },
   "license": "MIT",
@@ -21,6 +21,11 @@
     "jest": "^29.5.0",
     "parcel": "^2.8.3",
     "prettier": "2.8.5",
+    "process": "^0.11.10",
     "typescript": "*"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
