--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
