--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "typescript": "*"
   },
   "dependencies": {
+    "@graphcms/rich-text-react-renderer": "^0.6.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
